# Minicord

./: .gitignore  CMakeLists.txt  LICENSE  README.md
linux/: Makefile
src/: main.cpp
src/etc/: utils.cpp  utils.h
src/gateway/: gateway.cpp  gateway.h  gateway_enums.h
src/objects/: user.h
windows/: Makefile
